Strategy python example

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# JAVA
+
 *.class
 
 # Mobile Tools for Java (J2ME)
@@ -14,3 +16,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# PYTHON
+*.pyc
